Updated now works fine

--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
 
     <!-- CSS Link -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Icon links -->
+    <script
+      src="https://kit.fontawesome.com/5d04c0d980.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <section class="container">
-      <label for="" class="switch">
-        <input type="checkbox" name="" id="" checked />
-        <span class="slider">
-          <p class="on-off">ON</p>
-        </span>
-      </label>
-      <label for="" class="switch">
-        <input type="checkbox" name="" id="" />
-        <span class="slider">
-          <p class="on-off">OFF</p>
-        </span>
-      </label>
+      <input type="checkbox" class="toggle" id="check" />
+      <label for="check"> </label>
+
+      <input type="checkbox" class="toggle" id="check2" checked />
+      <label for="check2"> </label>
     </section>
+
+    <section class="new-toggle-container"></section>
   </body>
 </html>
