--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
   </head>
   <body>
     <section class="container">
-      <input type="checkbox" class="toggle" id="check" />
+      <div class="striped"></div>
+      <div class="filled"></div>
+
+      <input type="checkbox" class="toggle" id="check" checked />
       <label for="check"> </label>
 
-      <input type="checkbox" class="toggle" id="check2" checked />
+      <input type="checkbox" class="toggle" id="check2" />
       <label for="check2"> </label>
+
+      <div class="striped2"></div>
+      <div class="filled2"></div>
     </section>
   </body>
 </html>
