Made a fun game with JS

--- a/index.html
+++ b/index.html
@@ -20,14 +20,28 @@
     <div class="filled"></div>
 
     <section class="container">
-      <input type="checkbox" class="toggle" id="check" checked />
+      <input
+        type="checkbox"
+        class="toggle"
+        id="check"
+        checked
+        onclick="checkUncheck(this)"
+      />
       <label for="check"></label>
 
-      <input type="checkbox" class="toggle" id="check2" />
+      <input
+        type="checkbox"
+        class="toggle"
+        id="check2"
+        onclick="checkUncheck(this)"
+      />
       <label for="check2"></label>
     </section>
 
     <div class="striped2"></div>
     <div class="filled2"></div>
+
+    <!-- JS -->
+    <script src="script.js"></script>
   </body>
 </html>
